Bug 21456. Support for 'alt=' attribute on applet frames. Patch submitted by edburns@acm.org, r=waterson, nisheeth, a=waterson.